--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,11 @@
     <Link rel="stylesheet" href="css/estilos.css"></Link>
 </head>
 <body>
-    <h1>Aqui vamos hacer un blog post</h1>
-    <p>Y este es el parafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el titulo atractivo e interesante del post</h1>
+            <p>Y este es el parafo de inicio donde vamos a explicar las cosas increeibles que s epuede hacer con ramas</p>
+        </div>
+    </div>
 </body>
 </html>
