--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parafo de inicio donde vamos a explicar las cosas increeibles que s epuede hacer con ramas</p>
+            <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Exepto si eres un rockstar pero estadisticamente no lo ere por ahora</p>
         </div>
     </div>
 </body>
