--- a/blogpost.html
+++ b/blogpost.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El titulo de post</title>
+    <title>Bienvenido a Hyperblog</title>
     <Link rel="stylesheet" href="css/estilos.css"></Link>
 </head>
 <body>
