--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,9 @@
             <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Exepto si eres un rockstar pero estadisticamente no lo ere por ahora</p>
             <p>Suscribete y dale like</p>
         </div>
+        <div id="footer">
+            Hecho con amor en platzi &#128154
+        </div>
     </div>
 </body>
 </html>
