--- a/blogpost.html
+++ b/blogpost.html
@@ -11,12 +11,12 @@
         <div id="cabecera">
             <img id="logo" src="imagenes/dragon.png" />
             Hyperblog
-            <span id="tagline">tu blog de cabecera</span>
+            <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
-            <h1>Este es el titulo atractivo e interesante del post</h1>
-            <p>Y este es el parafo de inicio donde vamos a explicar las cosas increeibles que s epuede hacer con ramas</p>
-            <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Exepto si eres un rockstar pero estadisticamente no lo ere por ahora</p>
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles  que se puede hacer con ramas</p>
+            <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en youtube. Excepto si eres un rockstar pero estadísticamente no lo ere por ahora</p>
             <p>Suscribete y dale like</p>
         </div>
         <div id="footer">
