--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
         <div id="post">
             <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
             <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles  que se puede hacer con ramas</p>
+            <p><img src="imagenes/equipo.jpg" alt="" width="100%"> </p>
             <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho m&aacute;s que ir a conferencias o salir en youtube. Excepto si eres un rockstar pero estad&iacute;sticamente no lo ere por ahora</p>
             <p>Suscribete y dale like</p>
         </div>
